<resources>
    <string name="app_name">easysus</string>
    <string name="action_sign_in">Login</string>
    <string name="action_register">Registre-se agora</string>
    <string name="name">Digite seu nome completo:</string>
    <string name="susnumber">Digite seu Numero do SUS:</string>
    <string name="pass">Digite sua senha:</string>
    <string name="newpass">Digite sua nova senha:</string>
    <string name="confirmpass">Confirme sua senha:</string>
    <string name="bem_vindo">Bem vindo, </string>
    <string name="title_dados_unidade">Unidade de Saúde Mais Próxima:</string>
    <string name="nome_unidade">Nome: </string>
    <string name="endereco_unidade">Endereço: </string>
    <string name="bt_entrar_fila">Marcar Consulta</string>
    <string name="bt_checarfila">Checar fila</string>
    <string name="bt_sair">Sair</string>
    <string name="cadastrook">CADASTRO REALZIADO COM SUCESSO!</string>
    <string name="cadastrocriminoso">ERRO: cadastro já existe.</string>
    <string name="loginErrado">ERRO: número do SUS ou senha incorretos.</string>

    <string name="activity_queue_title">Nome,</string>
    <string name="activity_queue_position">Atualmente tem </string>
    <string name="activity_queue_position2">  pessoas na sua frente.</string>
    <string name="activity_queue_forecast">Previsão de Atendimento:</string>
    <string name="activity_queue_bt_back">Voltar</string>
    <string name="activity_queue_bt_sair">Sair</string>
    <string name="timer">XX:XX</string>
    <string name="municipio">Escolha o Municipio onde mora:</string>
    <string name="bairro">Escolha o bairro onde mora:</string>

    <string-array name="municipio">
        <item>Rio de Janeiro</item>
    </string-array>
    <string-array name="bairro">
        <item>Tijuca</item>
    </string-array>



</resources>