<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:theme="@style/Register"
    android:background="@drawable/background_solid">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="258dp"
            app:srcCompat="@drawable/suslogov2"
            android:contentDescription="TODO" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/susnumber"
            android:textColor="@color/cinzaclaro"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/editTextNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:background="@drawable/campos"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/cinzaclaro"
            android:layout_marginTop="5dp"/>

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/campos"
            android:ems="10"
            android:inputType="textPersonName"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/newpass"
            android:textColor="@color/cinzaclaro"
            android:layout_marginTop="5dp"/>

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:textColor="#000000"
            android:background="@drawable/campos"
            android:layout_marginTop="5dp"
            android:textAlignment="center"
            />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirmpass"
            android:textColor="@color/cinzaclaro"/>

        <EditText
            android:id="@+id/editTextTextPassword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:background="@drawable/campos"
            android:layout_marginTop="5dp"/>

        <Button
            android:id="@+id/button"
            android:layout_width="178dp"
            android:layout_height="wrap_content"
            android:background="@drawable/clickbutton"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:text="@string/action_register"
            android:textAlignment="center"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>